--- a/W4D4/music_app/app/views/layouts/application.html.erb
+++ b/W4D4/music_app/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
   </head>
 
   <body>
+    <br>
+    <% if logged_in? %>
+      Welcome <%= current_user.email %>!
+      <br><br>
+      <%= button_to 'Log Out', session_url, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign In', new_session_url %>
+      <%= link_to 'Sign Up', new_user_url %>
+    <% end %>
+
+    <br><br><br>
+
     <%= yield %>
   </body>
 </html>
